--- a/oblig3_og_4/supervised_learing/student_performance.ipynb
+++ b/oblig3_og_4/supervised_learing/student_performance.ipynb
@@ -200,7 +200,7 @@
    "source": [
     "#### RandomForestClassifier\n",
     "\n",
-    "- For å tune denne modellen så har jeg valgte å bruke disse parameterne, max_depth, min_samples_leaf, crriterion og n_estimatiors. Jeg valgte å brukes disse parameterne da jeg mener at disse er de mest relevante parameterne å bruke for denne typen modell, samt å hvis forståelse for hvordan dette påvirker prestasjonen til modellen uten at tuning og testing av modellen blir altfor tidkrevende.\n",
+    "- For å tune denne modellen så har jeg valgte å bruke disse parameterne, max_depth, min_samples_leaf, crriterion og n_estimatiors. Jeg valgte å brukes disse parameterne da jeg mener at disse er noen av de mest relevante parameterne for denne typen modell, samt å hvis forståelse for hvordan dette påvirker prestasjonen til modellen uten at tuning og testing av modellen blir altfor tidkrevende.\n",
     "\n",
     "- Max_depth definere hvor dype de forskjellige trene i modellen kan være, generelt vil dette gjøre at jo dypere treet er jo bedre kan disse tilpasse seg datasettet, men dette øker også risikoen for overfiting da du ofte kan få treer som tilpasser seg edge caser hvis du ikke implementere andre parameter for å unngå dette [1].\n",
     "\n",
@@ -281,6 +281,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "66d90f28",
+   "metadata": {},
+   "source": [
+    "- Max depth: Både for accuracy og f1 ser vi at verdier under 20 ser ut til å gi dårligere prestasjon for modellen, imidlertid gir ikke 10 mye dårliger ytelse enn for 20. For verdier høyere enn 20 ser det ikke ut som disse gir en videre forbedring av resultatene til modellen for denne parmeteren jeg har defor valg å ikke test verdier utover 35. Ut i fra disse resultatene velger jeg å bruke 20 som videre verdi for den endelige modellen.\n",
+    "\n",
+    "- min samples leaf: For denne parameren ser vi at høyere verdier ser ut til å gi gradvis dårligere resultater både for accuracy og f1. Det er også mulig at det ville gitt endre bedre resultater uten noen begresning for denne parmeteren, men 2 er allrede en veldig lav verdi for denne parameren og øker rikikoen for at modell kan få problemer med overfiting betydelig. Ut i fra resultatene har jeg valgt å bruke 2 som verdi for denne parameteren til den endelige modellen.\n",
+    "\n",
+    "- n estimators: For denne parameteren ser vi at stigende verdier fra 50 opp til 500 ser ut til å gi bedre resultater både for accuracy og for f1, for verdier over 500 ser det ikke til at dette gir noen videre forbedring for ytelse til modellen. Jeg har derfor valgt å ikke teste videre verdier for denne parameteren. For den endelige modellen kommer jeg til bruke 500 som verdi da jeg mener denne vil best resultater, samt redusere antall unødvendige estimatorer som potensielt kan føre til mer overfiting.\n",
+    "\n",
+    "Da innledende testing av modellen (ikke inkludert) har vist de forskjellige parameterene for criterion ikke påvirker ytelse til modellen i stor grad har jeg valgt å test denne parameren i en egen test med de endelige verdiene for de andre parmeterene."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 37,
    "id": "905fed19",
@@ -339,6 +353,14 @@
     "fig, ax = plt.subplots(1,2, figsize=(20,10))\n",
     "sb.boxplot(data=rf_cv_results_2, x='param_criterion', y='mean_test_accuracy', ax=ax[0])\n",
     "sb.boxplot(data=rf_cv_results_2, x='param_criterion', y='mean_test_f1', ax=ax[1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7bd7b9e7",
+   "metadata": {},
+   "source": [
+    "- Som vi ser av resultatene over ser det ikke ut til å være noe stor forskjell mellom verdiene for denne parameteren, men det kan se ut til at entropy og log loss har litt høyere potensial for prestasjonen til modellen enn for gini. Jeg har derfor valgt å bruke entropy i den endelige modellen."
    ]
   },
   {
@@ -621,10 +643,34 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4fb2c437",
+   "id": "1bc66cef",
    "metadata": {},
    "source": [
-    "gradiens"
+    "#### Vurdering av RandomForestClassifier\n",
+    "\n",
+    "- Ut ifra resultatene til modellen ser vi at den følgende resultater accuracy: 0.7769, precision: 0.7369, recall: 0.6831, f1: 0.6952, roc_auc: 0.891088. Når videre ser på std for resultatene kan se at disse er relativt små for alle metricene og derfor tyder på at disse resultatene er representative for hele datasettet.\n",
+    "\n",
+    "- Hvis vi ser på resultatene for train opp mot test, så ser vi at train har veldig mye bedre resultater og høye verdier for alle metricene, dette tyder på at modellen i betydelig grad overfiter til trenings delen datasettet. Hvis jeg skulle ha jobbet videre med denne modellen ville jeg ha prøv å redusere denne overfiting for å se om dette kunne gitt videre økning i ytelsen til modellen. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "14026963",
+   "metadata": {},
+   "source": [
+    "#### GradientBoostingClassifer\n",
+    "\n",
+    "- For denne modellen har jeg valgt å tune disse parameterne, n_estimators, learing_rate, min_samples_split og max_depth. Jeg valgte å brukes disse parameterne da jeg mener at disse er noen av de mest relevante parameterne for denne typen modell, samt å hvis forståelse for hvordan dette påvirker prestasjonen til modellen uten at tuning og testing av modellen blir altfor tidkrevende.\n",
+    "\n",
+    "- Max_depth definere hvor dype de forskjellige trene i modellen kan være, generelt vil dette gjøre at jo dypere treet er jo bedre kan disse tilpasse seg datasettet, men dette øker også risikoen for overfiting da du ofte kan få treer som tilpasser seg edge caser hvis du ikke implementere andre parameter for å unngå dette [2].\n",
+    "\n",
+    "- min_samples_split er en parameter som brukes for å redusere overfiting på de forskjellige trærne, denne parameteren setter en begrensning på hvor mange verdier en node må inneholde for at den skal kunne splittes opp videre i nye noder [2].\n",
+    "\n",
+    "- n_estimator er en parameter som definere hvor mange individuelle treere modellen kan inneholde. Dvs. desto høyere denne verdien er jo bedre kan modellen i utgangspunktet tilpasse seg et datasett, men dette øker også risikoen for overfiting samt kjøretiden til modellen [2].\n",
+    "\n",
+    "- Learning rate bestemmer hvor mye påvirkning hvert enkel tree i modellen har på den helhetlige modellen, desto lavere learing rate jo midre påvirkning vil det enkelte treet i modellen ha på helheten av modellen [2].\n",
+    "\n",
+    "- [2]: Scikit Learn. (u.å) GradientBoostingClassifier. Hentet 3. Desember 2025 fra https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.GradientBoostingClassifier.html"
    ]
   },
   {
