--- a/oblig3_og_4/supervised_learing/student_performance.ipynb
+++ b/oblig3_og_4/supervised_learing/student_performance.ipynb
@@ -735,7 +735,7 @@
    "id": "fdae63d8",
    "metadata": {},
    "source": [
-    "- Som vi ser av resultatene over så ser ut som 1-2 av verdiene som ble valgt for learing rate påvirker helheten av resultatene betyde og derfor gjøre det vanskelig å tolk de andre resultatene sikkert. For learing rate ser vi at høyere verdier gi bedre resultater, dette tyder på at modellen for dette datasettet er avhengig av at hvert enkelt tree har større betydning for helheten."
+    "- Som vi ser av resultatene over så ser ut som 1-2 av verdiene som ble valgt for learing rate påvirker helheten av resultatene betydelig og derfor gjøre det vanskelig å tolk de andre resultatene sikkert. For learing rate ser vi at høyere verdier gi bedre resultater, dette tyder på at modellen for dette datasettet er avhengig av at hvert enkelt tree nå ha større betydning for helheten av modellen."
    ]
   },
   {
@@ -887,6 +887,20 @@
     "sb.boxplot(data=gb_cv_results_3, x='param_min_samples_split', y='mean_test_f1', ax=ax[1,1])\n",
     "sb.boxplot(data=gb_cv_results_3, x='param_max_depth', y='mean_test_f1', ax=ax[1,2])\n",
     "sb.boxplot(data=gb_cv_results_3, x='param_n_estimators', y='mean_test_f1', ax=ax[1,3])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9a6907ee",
+   "metadata": {},
+   "source": [
+    "- Learing rate: som vi ser av resultatene gir 0.1 best gjennomsnittlige resultater både for accuracy og f1, men 0.2 ser ut til å ha mindre spredning for negative resultater og høyere spredning for positive resultater. Ut ifra fra helheten av resultatene velger jeg å bruke 0.1 som verdi for denne parameteren.\n",
+    "\n",
+    "- min sample split: for min sample split ser vi at det gir litt dårligere resultater for en verdi på 40 som tyder på at høyere verdier enn dette ikke vil være fordelaktig. Når vi ser på forskjellen mellom 2 og 6, så er det ikke store forskjeller mellom disse. Ut ifra resultatene ser det ut som 2 har litt høyere gjennomsnittlig resultat for accuracy og litt lavere for f1 kontra 6. Ut ifra helheten av resultatene velger jeg å bruke en verdi på 6 for denne parameteren, det eventuelt vært vurder å bruke 12 også denne verdien i tidligere runder så ut til å gi tilsvarende resultater som 6, en den hadde noe tettere spredning av resultat og muliges litt lavere potensial for høye resultater.\n",
+    "\n",
+    "- max depth: For denne parameteren ser vi tydelig at 2 gir bedre resultater enn 1 så jeg velger 2 som verdien for den endelige modellen.\n",
+    "\n",
+    "- n estimatiors: For antall estimatorer ser vi at 250 gir litt bedre gjennomsnittlige resultater enn for 100, jeg velger derfor å bruke 250 som verdi for den endelige modellen."
    ]
   },
   {
@@ -1169,10 +1183,33 @@
   },
   {
    "cell_type": "markdown",
+   "id": "42559484",
+   "metadata": {},
+   "source": [
+    "#### Vurdering av GraidientBoostingClassifier\n",
+    "\n",
+    "- Ut ifra resultatene til modellen ser vi at den har følgende resultater accuracy: 0.7817, precision: 0.7353, recall: 0.7017, f1: 0.7124, roc_auc: 0.8913. Hvis vi ser på std. for resultatene ser at std. har små verdier for alle metricene, dette tyder derfor på at disse resultatene er representative for hele datasettet.\n",
+    "\n",
+    "- Når vi ser på forskjellen i resultatene mellom train og test så ser vi resultatene for denne modellen ligger betydelig nærmere hverandre enn for RandomForst modellen, dette tyder på at GradientBoost modellen har betydelig mindre problemer med overfiting. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0472aafa",
    "metadata": {},
    "source": [
-    "LR"
+    "#### LogisticRegression\n",
+    "- For denne typen modeller er det ikke en betydelig mendge med parametere som er hensiksmessig å tune, jeg har valgt å tune disse parameterene  C, solver, tol og max_iter.  \n",
+    "\n",
+    "-  C parameteren definere styrkene på regulariseringen til modellen og lavere verdier gi sterkere regularisering. Denne parameteren brukes til å redusere eventuelt overfiting en modell har [3].\n",
+    "\n",
+    "- Solver parameteren definere forskjellige underliggende algoritmer som modellene bruker, disse har forskjellige fordeler og ulemper og gitt forskjellige karakteristikker for datasettet kan potesielt gi bedre eller dårligere resultater ut ifra hvilken algoritme som er best tilpasset et datasett[3].\n",
+    "\n",
+    "- max_iter parameteren lar deg sette begrensninger på antall iterasjoner som modellen får kjøre før den stopper [3].\n",
+    "\n",
+    "- tol: denne parameteren bestemmer konvergens kriteriet for modellen og bestemmer minimums endringen som kreves for at modellen skal kjøre flere iterasjoner [3].\n",
+    "\n",
+    "[3]: Scikit Learn. (u.å) Ridge. Hentet 06. Desember 2025 fra https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.LogisticRegression.html"
    ]
   },
   {
@@ -1231,6 +1268,22 @@
     "sb.boxplot(data=lr_cv_results, x='param_tol', y='mean_test_f1', ax=ax[1,1])\n",
     "sb.boxplot(data=lr_cv_results, x='param_max_iter', y='mean_test_f1', ax=ax[1,2])\n",
     "sb.boxplot(data=lr_cv_results, x='param_solver', y='mean_test_f1', ax=ax[1,3])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7ea68325",
+   "metadata": {},
+   "source": [
+    "- Generelt for denne modellen ser vi at det ikke er store forskjeller i resultatene for de forskjellige parameter verdiene og vi ser at det er for mange av parameter verdiene blir veldig like resultater, jeg kommer derfor til å fjerne noen av verdiene og kjøre en ny tuning runde for å se om dette gir noe tydeligere skiller i resultatene.\n",
+    "\n",
+    "- C: For denne parameteren ser det ut som det ikke gir noen videre bedre resultater for verdier over 1.0 jeg kommer derfor til å fjerne noen av de høyere verdiene før neste tuning runde.\n",
+    "\n",
+    "- tol: For denne parameteren ser vi at det ikke ser ut til å gi noen bedre resultater med verdier som er lavere enn 0.001, samtidig som vi ser at det gir dårligere resultater for verdier lavere enn dette.\n",
+    "\n",
+    "- max iter: Her ser vi at det ikke ser ut til å være noen forskjell mellom verdiene og jeg velger her 250 som verdi å bruke videre, da jeg mener det ikke er hensiktsmessig å tillate mange flere iterasjoner enn dette ut ifra resultatene.\n",
+    "\n",
+    "- solver: for denne parameteren ser vi det er noen variasjoner for f1, men her velger jeg å ta med alle verdiene videre for å se hvordan dette påvirker av endringene for de andre parameterne."
    ]
   },
   {
@@ -1301,6 +1354,18 @@
     "sb.boxplot(data=lr_cv_results_2, x='param_tol', y='mean_test_f1', ax=ax[1,1])\n",
     "sb.boxplot(data=lr_cv_results_2, x='param_max_iter', y='mean_test_f1', ax=ax[1,2])\n",
     "sb.boxplot(data=lr_cv_results_2, x='param_solver', y='mean_test_f1', ax=ax[1,3])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0aaf40b4",
+   "metadata": {},
+   "source": [
+    "- C: For denne paramteren ser vi at det ikke er noen betydelig forskjell mellom 1.0 og 1.5 annet en litt lavere potensial for høyere resultater for 1.5. For 0.1 ser vi at denne verdien gir litt bedre resultater for accuracy, men dårligere for f1. Helhetlig velger jeg derfor å bruke 1.0 videre.\n",
+    "\n",
+    "- tol: For denne parameteren ser vi at det ikke er noen betydelig forskjell mellom de forskjellige verdiene borsett fra kansje en hårfin negativ trend for accuray ved lavere verdier. Jeg velger derfor å bruke 0.001 som verdi videre.\n",
+    "\n",
+    "- solver: For denne parameteren ser det ut som lbfgs gir litt bedre resultater for accuracy og potesielt også litt bedre for f1. Jeg velger derfor å brukke lbfgs for solver."
    ]
   },
   {
@@ -1583,6 +1648,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "81b7d46c",
+   "metadata": {},
+   "source": [
+    "#### Vurdering av LogisticRegression\n",
+    "\n",
+    "- Ut ifra resultatene til modellen ser vi at den har følgende resultater accuracy: 0.7651, precision: 0.7067, recall: 0.6686, f1: 0.6763, roc_auc: 0.8913. Hvis vi ser på std. for resultatene ser at std. har små verdier for alle metricene, dette tyder derfor på at disse resultatene er representative for hele datasettet.\n",
+    "\n",
+    "- Når vi ser på forskjellen i resultatene mellom train og test så ser vi resultatene for denne modellen har enda mindre forskjeller mellom train og test enn de andre modellen og ser ikke ut til å ha noen betydelige problemer med overfiting."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 33,
    "id": "d2bdac2f",
@@ -1726,7 +1803,17 @@
    "id": "888fee9b",
    "metadata": {},
    "source": [
-    "Sammenligning av modeller"
+    "### Sammenligning av Modellene\n",
+    "\n",
+    "- Ut ifra samlingene av resultatene for den endelige testen for alle modellene ser vi at det er GradientBoosting modellen som prestere best for alle metricene bortsett fra for precision hvor RandomForst modellen levere litt bedre resultat.\n",
+    "\n",
+    "- Når vi ser på hvor den største forskjellen i prestasjonen til modellen ligger, så ser dette ut til å være for recall metricen som også påvirker resultatet for f1. Dette kan tyde på at GradientBoosting modellen bedre klarer og predikere flere reelle positive verdier for de forskjellige klassene og at det er dette som fører til de bedre resultatene.\n",
+    "\n",
+    "- Som vi ser av forskjellene mellom train og test resultatene for modellene, så har RandomForstes modellen betydelige problermer med overfiting. GradientBoosting modellen har mye mindre problmer med dette, men det er fortsatt noen overfiting for denne modellen også. For LogisticRegession modellen så er det veldig liten forskjell mellom train og test resultatene som tyder på at den i svert liten grad har problmere med overfiting.\n",
+    "\n",
+    "- Hvis vi skulle ha implemetert en av disse modellen i en reell situasjon ville det derfor vært viktig å vurdere viktigheten av best mulig prestasjon opp mot potensialet for overfiting, samt at GradientBoosting er betydelig mer tidkrevende å tune videre hvis dette er nødvendig.\n",
+    "\n",
+    "- For testing av treshold tuning og sammenligning med neural nettwork modellen velger jeg å bruk GradientBoosting da denne modellen levere de beste resultatene."
    ]
   },
   {
