--- a/oblig3_og_4/neural_networks/student_performance_neural.ipynb
+++ b/oblig3_og_4/neural_networks/student_performance_neural.ipynb
@@ -132,9 +132,11 @@
     "\n",
     "- For oppdelingen av datasettet har jeg bruk StratifiedKFold slik at det oppnå så lik som mulig fordeling av target klassene mellom de forskjellige oppsplittingene av datasettet.\n",
     "\n",
-    "- For å vurdere disse modellene har jeg valgt å bruke disse metricene Accuracy, Precision, Recall, F1-score og Roc_auc. Accuracy er et mål på hvor treffsikre prediksjonene er for hele datasettet. Precision er et mål på hvor godt modellen klarer å predikere positive representasjoner for den enkelte klassen målt opp mot det totale antallet positive prediksjoner. Recall er et mål på hvor godt modellen klarer å predikere positive repsentasjoner for den enkelte klassen målt opp mot det det faktiske antalle av positive representasjoner. F1-score er en samlet representasjon av precision og recall som balansere hverandre slik at du en god verdi på den enne av disse vil balanseres av den dårlig verdi på den andre. Roc_auc er et mål på arealet under en ROC curve som representere forholdet mellom ekte positive prediksjoner og falske positive prediksjoner.\n",
+    "- For å vurdere disse modellene har jeg valgt å bruke disse metricene Accuracy, Precision, Recall, F1-score. Accuracy er et mål på hvor treffsikre prediksjonene er for hele datasettet. Precision er et mål på hvor godt modellen klarer å predikere positive representasjoner for den enkelte klassen målt opp mot det totale antallet positive prediksjoner. Recall er et mål på hvor godt modellen klarer å predikere positive repsentasjoner for den enkelte klassen målt opp mot det det faktiske antalle av positive representasjoner. F1-score er en samlet representasjon av precision og recall som balansere hverandre slik at du en god verdi på den enne av disse vil balanseres av den dårlig verdi på den andre.\n",
     "\n",
-    "- For precision, recall, f1 og roc_auc er det imidlertid hvert å merke seg at disse metricene i utgangspunktet er laget for å vurdere binære klassifikasjoner og at derfor må disse vurderes enkeltvis og så samles, jeg har valgt å bruke et uvektet macro gjennomsnitt for å oppnå dette.\n",
+    "- I utgangspunktet ønsket jeg også å inkludere roc_auc til vurderingen av neural nettwork modellene som for supervised modellen, men hadde noen problmer med å få dette til å fungere. Jeg valgte ikke å bruke mye ekstra tid på dette tok derfor ikke med denne metricen for neural nettwork modellene.\n",
+    "\n",
+    "- For precision, recall og f1 er det imidlertid hvert å merke seg at disse metricene i utgangspunktet er laget for å vurdere binære klassifikasjoner og at derfor må disse vurderes enkeltvis og så samles, jeg har valgt å bruke et uvektet macro gjennomsnitt for å oppnå dette.\n",
     "\n",
     "- For å unngå eksponentiell kjøretid ved tuningen av modellene kommer jeg til å dele opp tuningen i midre deler slik at kjøretiden blir lettere håndterbar. Utover dette kommer jeg til å gjennomføre noe videre tuning og testing av modellene som ikke vil være inkludert i de endelige fila av hensyn til å gjøre dokumentet mer oversiktig og lett forstålig, men jeg kommer til å dokumentere den helheltlige prossens slik at det mulig å se en rød tråd gjennom tuningen av modellene.\n",
     "\n",
@@ -152,17 +154,37 @@
    "source": [
     "#### Tensorflow Keras \n",
     "\n",
-    "- Som første modell starter jeg med en Keras Sequential modell som har 3 hidden layers i tillegg til input og utput layer. \n",
+    "- Som første modell starter jeg med en Keras Sequential modell hvor det er mulig å tune antall hidden layers i modellen, samt start utgangspunktet for antall nevroner i disse lagene og videre reduksjons faktor av antall nevroner for hvert lag som legges til. I tillegg til dette har jeg lagt til muligheten for et dropout lag.\n",
     "\n",
-    "-  For alle modellene komm jeg til å bruke softmax som aktiverings fuksjon for output layeret da det er denne som er bergnet for denne typen datasett. For loss function så bruks sparse categorical crossentropy da det er denne function som er riktig å bruke for klassifikasjons datasett med flere utput klasser og ikke et binært output.\n",
+    "-  For alle modellene kommer jeg til å bruke softmax som aktiverings funksjon for output layeret da det er denne som er beregnet for denne typen datasett. For loss function så bruks sparse categorical crossentropy da det er denne function som er riktig å bruke for klassifikasjons datasett med flere output klasser og ikke et binært output.\n",
     "\n",
-    "- For tuningen av modellene kommer jeg til å fokusere på følgene verdier, aktiverings funksjon for hidden layers, optimizer ved compilering, antall nevroner for 1 og 2 hidden layer, batch size, learing rate for optimizer og dropout for de modellene som inkludere dropout layer.\n",
+    "- For tuningen av modellene kommer jeg til å fokusere på følgene verdier, aktiverings funksjon for hidden layers, optimizer ved compilering, antall nevroner for start utgangspunktet, reduksjons faktor for antall nevroner, batch size, learing rate for optimizer og om modellen prestere bedre med eller uten et dropout layer.\n",
     "\n",
-    "- Videre kommer jeg til å tune optimizer, activation function og loss function først og i hovedsak beholde disse resultatene for tuning av resten av modellene da disse i stor grad påvirkes av selve datasettet. Jeg har valg å gjøre dette som et tidssparende tiltak da jeg mener dette fortsatt viser tilstrekkelig forståelse for tuningen av disse parameterne. Men i en reell situasjon vil jeg selvfølgelig tune disse parameterne mer utfyllende for alle modellen. Jeg kommer også til å bruke samme fremgang måte for andre parametere for de modellene hvor jeg kun legger til dropout layer uten å endre modellen noe videre enn det.\n",
+    "- Videre kommer jeg til å tune optimizer, activation function og learning rate først og i hovedsak beholde disse resultatene for tuning av resten av modellene da disse i stor grad påvirkes av selve datasettet. Jeg har valg å gjøre dette som et tidssparende tiltak da jeg mener dette fortsatt viser tilstrekkelig forståelse for tuningen av disse parameterne. Men i en reell situasjon vil jeg selvfølgelig tune disse parameterne mer utfyllende for alle modellen.\n",
     "\n",
-    "- Jeg har gjort en grunnleggen sjekk i forkant sli at tuning verdiene jeg starter ikke er for langt unna jeg som blir slutt resultatet. Jeg valg å gjøre dette da parametere som er veldig ulik slutt resultat vil kunne påvirker resultatet for tuningene av de forskjellige parameterene. \n",
+    "- Jeg har gjort en grunnleggende sjekk i forkant slik at tuning verdiene jeg starter ikke er for langt unna jeg som blir slutt resultatet. Jeg valg å gjøre dette da dette i større grad tillater meg å dele om tuning uten at dette i for stor grad påvirker slutt resultatet.\n",
     "\n",
-    "- Det kunne selfølgelig vært implementert endre mere utfylende tuning og utprøving av antall hidden layers, forskjellige activation functions for de individuelle hidden layers osv. Men jeg har valgt å begrense tuningen min til det utvalget jeg har gjort ut fra tidshensyn og det totale omfanget, da jeg mener at dette tilstrekkelig demonstere god forståelse for tuning prosessen og hvilke mulighet det er og hvilke hensyn som bør tas.  "
+    "- Det kunne selvfølgelig vært implementert endre mere utfyllende tuning og utprøving av antall hidden layers, forskjellige activation functions for de individuelle hidden layers osv. Men jeg har valgt å begrense tuningen min til det utvalget jeg har gjort ut fra tidshensyn og det totale omfanget, da jeg mener at dette tilstrekkelig demonstrere god forståelse for tuning prosessen, hvilke mulighet som finnes og hensyn som bør tas.\n",
+    "\n",
+    "- Keras sequential model: For denne modell må alle lagene jobbe i sekvensiell rekkefølge og de får input fra det fåregående laget i modellen. \n",
+    "\n",
+    "- optimizer + learning rate\n",
+    "\n",
+    "- aktiverings fuksjon\n",
+    "\n",
+    "- antall nevroner\n",
+    "\n",
+    "- batch size\n",
+    "\n",
+    "- dropout layer\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
